--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -38,10 +38,12 @@
 
     font-family: 'bebas', sans-serif;
 
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
 
-
+  html, body {
+    overflow-x: hidden;
+  }
 
   /* hero section */
 
@@ -357,7 +359,7 @@
     box-shadow: 6px 6px 0px 0px #7c12ffdf;
     width: 40vw;
     margin-bottom: 25px;
-    transform: rotate(2.5deg);
+    transform: rotate(-2.5deg);
   }
   
   .about-text{
@@ -428,7 +430,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    transform: rotate(-1.4deg);
+    /* transform: rotate(-1.4deg); */
     /* box-shadow: 6px 6px 0 0 #dde406df; */
   }
   .row{
@@ -784,8 +786,356 @@
 }
 
 .spaced{
-  margin-bottom: max(30vh, 70vh);
+  margin-bottom: max(30vh, 400px);
 }
 
 
 /* loading */
+height:30%;
+    width:30%; */
+  }
+
+
+  @media only screen and (max-width : 768px) {
+    .split{
+      flex-direction: column;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+    }
+    .doodle-about{
+      display: none;
+    }
+    .profile-img{
+      width: 250px;
+      height: 100%;
+      /* border: 3px solid red; */
+    }
+    .window-about{
+      transform: skew(-6.3deg);
+    }
+    .about-text{
+      font-size: min(1.5rem, 2rem);
+      /* width: 80%; */
+      text-align: left;
+      margin:1rem;
+    }
+  }
+
+  @media only screen and (max-width : 1200px) {
+    .split{
+      flex-direction: column;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  /* skills */
+  .window-skills{
+    border: 3px solid #323030;
+    border-top: 40px solid #323030;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: 6px 6px 0px 0px #c4ff12df;
+    width: 40vw;
+    margin-bottom: 25px;
+    transform: rotate(2.5deg);
+  }
+  .skills-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: rotate(-1.4deg);
+    /* box-shadow: 6px 6px 0 0 #dde406df; */
+  }
+  .row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+
+  .skill-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    border: 1px solid #323030;
+    border-radius: 50%;
+    background-color: #333333;
+    box-shadow: 3px 3px 0px 0px #12ccffe1;
+    margin-bottom: 10px;
+    color: #fff;
+    transform: rotate(2deg);
+    transition: all 0.25s ease-in-out;
+  }
+
+  .skill-btns{
+    /* left: -30vh; */
+    margin-right: auto;
+    left: 20px;
+  }
+
+  /* skills items */
+  .html:hover{
+    background-color: #ff6f00;
+    box-shadow: 3px 3px 0px 0px #c55602;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .css:hover{
+    background-color: #ff0090;
+    box-shadow: 3px 3px 0px 0px #980056;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .javascript:hover{
+    background-color: #ebe805;
+    box-shadow: 3px 3px 0px 0px #a9a602;
+    color: #000;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .react:hover{
+    background-color: #006aff;
+    box-shadow: 3px 3px 0px 0px #d66209;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .vue:hover{
+    background-color: #00ffa2;
+    box-shadow: 3px 3px 0px 0px #0a2eb0;
+    transform: scale(1.1) translateY(-10px);
+    color: white;
+  }
+
+  .shopify:hover{
+    background-color: #00cf22;
+    box-shadow: 3px 3px 0px 0px #007e15;
+    transform: scale(1.1) translateY(-10px);
+    color: #000;
+  }
+
+  .wordpress:hover{
+    background-color: #0026ff;
+    box-shadow: 3px 3px 0px 0px #001bb5;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .figma:hover{
+    background-color: #5500ff;
+    box-shadow: 3px 3px 0px 0px #c52202;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .material:hover{
+    background-color: #007bff;
+    box-shadow: 3px 3px 0px 0px #0159b8;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .next:hover{
+    background-color: #000;
+    box-shadow: 3px 3px 0px 0px rgb(55, 55, 55);
+    color: white;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+  .nuxt:hover{
+    background-color: #01ebc4;
+    box-shadow: 3px 3px 0px 0px #00987f;
+    transform: scale(1.1) translateY(-10px);
+    color: #000;
+  }
+
+  .tailwind:hover{
+    color: #000;
+    background-color: #00ccff;
+    box-shadow: 3px 3px 0px 0px #0091b5;
+    transform: scale(1.1) translateY(-10px);
+  }
+
+
+  @media screen and (max-width: 768px) {
+    .skill-item{
+      width: 55px;
+      height: 55px;
+      font-size: 0.8rem;
+    }
+    .window-about , .window-skills{
+      width: 80%;
+      margin-bottom: 10px;
+      transform: none;
+    }
+  }
+    
+  /* @media only screen and (max-width : 1024px) {
+    .skill-btns{
+      left: max(-8vh, -15vh);
+    }
+  }
+
+  @media only screen and (max-width : 768px) {
+    .skill-item{
+      width: 50px;
+      height: 50px;
+      font-size: 0.7rem;
+      margin-bottom: 10px;
+    }
+    .skill-btns{
+      height: 20px;
+      width: 100px;
+      left: max(-12vh, -13vh);
+    }
+  } */
+
+
+  /* ---- */
+
+/* projects */
+
+.projects-section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.projects-row{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.project-item{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  /* gap: 0.5rem; */
+  margin-bottom: 1.2rem;
+  align-items: center;
+  transition: all 0.25s ease-in-out;
+}
+
+.project-item:hover{
+  transform: rotate(3deg) scale(1.1);
+  transition: all 0.25s ease-in-out;
+}
+
+.project-image{
+  height: 100%;
+  width: max(380px, 140px);
+}
+
+.project-title{
+  font-size: 1.5rem;
+  /* font-weight: bold; */
+  color: #000;
+  margin-top:0px;
+  /* text-align: left; */
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+}
+
+
+.first-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #a200ff;
+}
+
+
+.second-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #ff8c00;
+}
+
+
+.third-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #0044ff;
+}
+
+
+.fourth-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #2bd301;
+}
+
+
+.fifth-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #cf3d0c;
+}
+
+
+.sixth-project{
+  border: 2px solid black;
+  box-shadow: 4px 4px 0  0 #0392e4;
+}
+
+
+@media screen and (max-width: 768px){
+  .project-item{
+    width: 40vw;
+    height: auto;
+    margin-bottom: 0;
+  }
+  .project-image{
+    width: 100%;
+    height: auto;
+  }
+  .project-title{
+    font-size: 0.9rem;
+  }
+}
+
+
+/* -------------------- */
+
+/* contact me */
+
+.resume-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.resume-btn{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: max(100px, 150px);
+  height: max(100px, 150px);
+  background-color: #CE7EFF;
+  border: 2px solid black;
+  color: #000;
+  text-decoration: none;
+  width: 300px;
+  height: 100px;
+  font-size: 2.5rem;
+  font-weight: 500;
+  box-shadow: 4px 4px 0  0 #b652f5;
+  transition: all 0.25s ease-in-out;
+}
+
+.resume-btn:hover{
+  transform: scale(1.1) rotate(3deg) skew(3deg);
+  transition: all 0.25s ease-in-out;
+}
+
+.tap-btn{
+  position:relative;
+  /* top: -10%; */
+  left: max(-10vw,-15vw);
+  height: 130px;
+  animation: tap-btn 1s ease-in-out
