--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -43,6 +43,8 @@
 
   html, body {
     overflow-x: hidden;
+    scroll-behavior: smooth;
+    scrollbar-width: 4px;
   }
 
   /* hero section */
@@ -118,6 +120,7 @@
     right: 10vw;
     height: 460px;
     width: 460px;
+    transition: all 0.1s ease-in-out;
     
   }
 
@@ -773,10 +776,13 @@
 
 
 .spaced{
-  margin-bottom: max(450px, 800px);
+  margin-bottom: max(450px, 560px);
 }
-
-
+@media screen and (min-width: 768px) and (max-width:1200){
+  .spaced{
+    margin-bottom: max(250px, 300px);
+  }
+}
 @media screen and (max-width: 767px){
   .resume-btn{
     width: 250px;
@@ -801,6 +807,107 @@
 }
 
 
+/* scrollbar */
+body::-webkit-scrollbar {
+  width: max(0.8rem,1rem);
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 1px 1px 0 0px rgba(0,0,0,0.4);
+}
+
+body::-webkit-scrollbar-thumb {
+background-color: rgb(107, 107, 107);
+/* max-height: 30px; */
+outline: 1px solid rgb(2, 2, 2);
+box-shadow: 2px 3px 0px 0px rgb(20, 20, 20);
+}
 
 
 /* loading */
+
+#preloader {
+  width: 100vw; 
+  height: 100vh; 
+  /* background: #000000;  */
+  position: fixed; 
+  display: grid; 
+  align-items: center; 
+  justify-content: center;
+  scrollbar-width: 0px;
+}
+
+.loading__text {
+  letter-spacing: 30px; 
+  color: rgb(15, 15, 15); 
+  font-weight: 700; 
+  position: relative; 
+  top: -50px; 
+  pointer-events: none;
+  user-select: none;  
+  text-align: center;
+}
+
+.pace {
+  pointer-events: none;
+  user-select: none;
+  z-index: 1000; 
+  position: fixed; 
+  margin: auto; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  width: 400px; 
+  border: 0; 
+  height: 1px; 
+  overflow: hidden; 
+  /* background: var(--bg-light);  */
+}
+/* 
+.pace .pace-progress {
+  max-width: 400px; 
+  position: absolute; 
+  z-index: 2000; 
+  top: 0; 
+  right: 100%; 
+  height: 100%; 
+  width: 100%; 
+} */
+
+
+.pace.pace-inactive .pace-progress {
+	display: none;
+}
+
+.pace .pace-progress {
+	position: fixed;
+	z-index: 2000;
+	top: 0;
+	right: 0;
+	height: 5rem;
+	width: 5rem;
+
+	-webkit-transform: translate3d(0, 0, 0) !important;
+	-ms-transform: translate3d(0, 0, 0) !important;
+	transform: translate3d(0, 0, 0) !important;
+}
+
+.pace .pace-progress:after {
+	display: block;
+	position: absolute;
+	top: 30%;
+	right: 50%;
+	content: attr(data-progress-text);
+	font-family: mono;
+	font-weight: 100;
+	font-size: 8rem;
+	line-height: 1;
+	text-align: right;
+	color: rgba(0, 0, 0, 0.565);
+}
+
+main{
+  opacity: 0;
+  /* transform: translateY(100px); */
+}
