--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -186,9 +186,11 @@
     transform: rotate(-90deg);
   }
   .down-arrow{
-    height: max(70px, 90px);
-    width: 60px;
+    height: max(70px, 80px);
+    width: 30px;
     animation: arrow-down 2s infinite;
+	  left: max(0vw,1.5vw);
+      position: relative;
   }
 
   @keyframes arrow-down {
@@ -267,7 +269,7 @@
 
     .down-arrow{
       height: max(70px,90px);
-      width: max(25px,40px);
+      width: max(20px,30px);
       animation: arrow-down 2s infinite;
       left: max(1vw,3vw);
       position: relative;
@@ -305,8 +307,8 @@
       flex-direction: column;
     }
     .down-arrow{
-      height: max(30px, 50px);
-      width: 60px;
+      height: max(30px, 60px);
+      width: 25px;
       animation: arrow-down 2s infinite;
     }
   }
