--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -631,9 +631,10 @@
   flex-direction: column;
   align-content: center;
   /* gap: 0.5rem; */
-  margin-bottom: 1.2rem;
+  margin-bottom: 1.5rem;
   align-items: center;
   transition: all 0.25s ease-in-out;
+  text-decoration: none;
 }
 
 .project-item:hover{
@@ -642,8 +643,9 @@
 }
 
 .project-image{
-  height: 100%;
+  height: 200px;
   width: max(380px, 140px);
+  /* object-fit: fill; */
 }
 
 .project-title{
@@ -654,6 +656,19 @@
   /* text-align: left; */
   margin-bottom: 10px;
   letter-spacing: 1px;
+}
+
+.tags{
+  font-size: 0.8rem;
+  color: #000;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+  border: 1px solid #000;
+  padding:3px;
+  margin-left: 5px;
+  margin-right: 5px;
+  box-shadow: 2px 2px 0 0 black;
+  background-color: whitesmoke;
 }
 
 
@@ -697,11 +712,11 @@
   .project-item{
     width: 40vw;
     height: auto;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
   }
   .project-image{
     width: 100%;
-    height: auto;
+    height: 100px;
   }
   .project-title{
     font-size: 0.9rem;
