--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -658,6 +658,8 @@
   letter-spacing: 1px;
 }
 
+/* tags */
+
 .tags{
   font-size: 0.8rem;
   color: #000;
@@ -667,10 +669,63 @@
   padding:3px;
   margin-left: 5px;
   margin-right: 5px;
-  box-shadow: 2px 2px 0 0 black;
+  box-shadow: 2px 2px 0 0 rgb(0, 0, 0);
   background-color: whitesmoke;
 }
 
+.tag-html
+{
+  background-color: #ff6f00;
+  color: #fff;
+}
+
+.tag-css
+{
+  background-color: #ff0090;
+  color: #fff;
+}
+
+.tag-js
+{
+  background-color: #ebe805;
+  color: #000;
+}
+
+.tag-react
+{
+  background-color: #006aff;
+  color: #fff;
+}
+
+.tag-vue
+{
+  background-color: #00ffa2;
+  color: #000;
+}
+
+.tag-wp
+{
+  background-color: #0026ff;
+  color: #fff;
+}
+
+.tag-firebase
+{
+  background-color: #5500ff;
+  color: #fff;
+}
+
+.tag-cms
+{
+  background-color: #007bff;
+  color: #fff;
+}
+
+.tag-rn
+{
+  background-color: #00cf22;
+  color: #000;
+}
 
 .first-project{
   border: 2px solid black;
