--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -199,9 +199,11 @@
     transform: rotate(-90deg);
   }
   .down-arrow{
-    height: max(70px, 90px);
-    width: 60px;
+    height: max(70px,90px);
+    width: max(25px,40px);
     animation: arrow-down 2s infinite;
+    left: max(1vw,3vw);
+    position: relative;
   }
 
   @keyframes arrow-down {
@@ -323,9 +325,11 @@
       flex-direction: column;
     }
     .down-arrow{
-      height: max(30px, 50px);
-      width: 60px;
+      height: max(70px,90px);
+      width: max(25px,40px);
       animation: arrow-down 2s infinite;
+      left: max(1vw,3vw);
+      position: relative;
     }
   }
 
