--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -287,7 +287,8 @@
       height: max(70px,90px);
       width: max(25px,40px);
       animation: arrow-down 2s infinite;
-      left: max(0.7vw,1.2vw);
+/*       left: max(0.7vw,1.2vw); */
+	    left:max(18px, 20px);
       position: relative;
     }
   
