--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -631,6 +631,7 @@
   align-items: center;
 }
 .project-item{
+  z-index: 0;
   justify-content: center;
   display: flex;
   flex-direction: column;
@@ -661,9 +662,9 @@
   font-size: 1.5rem;
   /* font-weight: bold; */
   color: #000;
-  margin-top:0px;
+  margin-top:5px;
   /* text-align: left; */
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   letter-spacing: 1px;
 }
 
