--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -809,8 +809,9 @@
     margin-bottom: 1.8rem;
   }
   .project-image{
-    width: 100%;
-    height: 100px;
+        width: 290px;
+    height: 150px;
+}
   }
   .project-title{
     font-size: max(0.9rem,1.4rem);
